--- a/hosts.yml
+++ b/hosts.yml
@@ -79,8 +79,8 @@ all:
     home_master:
       hosts:
         gpu0:
-          ansible_port: 22
-          ansible_host: 192.168.18.18
+          ansible_port: 25702
+          ansible_host: 41n196z053.wicp.vip
           ip: 192.168.18.18
           as_hostname: gpu0.dev.yufei.com
           domains:
@@ -133,6 +133,68 @@ all:
             ES_JAVA_OPTS:
           mongo_config:
             wiredTiger.engineConfig.cacheSizeGB: 10
+
+
+          op_user: zhaoyufei
+          op_user_group: hadoop
+
+          ops_dashboards:
+
+            home: /data/apps/ops_dashboards/
+            server.port: 5601
+            opensearch.hosts: http://gpu0.dev.yufei.com:9200/
+            opensearch.username: yufei.zhao
+            opensearch.password: 123546
+
+          ops_cfg:
+
+            node.roles:
+              - master
+              - data
+            cluster.name: comm_dev
+            discovery.seed_hosts:
+              - gpu0.dev.yufei.com:9300
+              - gpu0.dev.yufei.com:9301
+
+            cluster.initial_master_nodes:
+              - com_dev_1
+              - com_dev_2
+
+
+
+
+            bootstrap.memory_lock: false
+
+
+            #            node.name: vb0_2
+            #            http.port: 9201
+            #            transport.tcp.port: 9301
+            #
+            #            ops_home: /data/apps/ops_2/
+            #            ops_cfgDir: /data/apps/ops_cfg_2/
+            #            ops_dataDir: /data/apps/ops_data_2/
+            #            ops_logDir: /data/apps/ops_logs_2/
+
+            #
+#            node.name: com_dev_1
+#            http.port: 9200
+#            transport.tcp.port: 9300
+#
+#            ops_home: /data/apps/ops_com_dev_1/
+#            ops_cfgDir: /data/apps/ops_cfg_com_dev_1/
+#            ops_dataDir: /data2/ops_data_com_dev_1/
+#            ops_logDir: /data2/ops_logs_com_dev_1/
+            node.name: com_dev_2
+            http.port: 9201
+            transport.tcp.port: 9301
+
+            ops_home: /data/apps/ops_com_dev_2/
+            ops_cfgDir: /data/apps/ops_cfg_com_dev_2/
+            ops_dataDir: /data2/ops_data_com_dev_2/
+            ops_logDir: /data2/ops_logs_com_dev_2/
+
+            xms: -Xms4g
+            xmx: -Xmx4g
 
 
 
@@ -220,7 +282,7 @@ all:
         vb0:
           ansible_port: 22
           ansible_host: vb0.dev.yufei.com
-          ip: 192.168.18.21
+          ip: 10.112.98.254
           netplan_cfg: /etc/netplan/00-installer-config.yaml
           as_hostname: vb0.dev.yufei.com
           as_gpu: false
@@ -232,16 +294,97 @@ all:
           as_cpu_vcores: 4
           as_hdfs_data_dir: file:///data/hadoop/hdfs/datanode
 
-          #          app_rootDir: /data/apps/
-          #          app_dataRootDir: /data/app_data/
-          #          app_logRootDir: /data/app_logs/
-          #          app_confRootDir: /data/app_conf/
+          app_rootDir: /data/apps/
+          app_dataRootDir: /data/app_data/
+          app_logRootDir: /data/app_logs/
+          app_confRootDir: /data/app_conf/
+
+          domains:
+            - ip: 10.112.98.254
+              domain: vb0.dev.yufei.com
+            - ip: 10.112.100.44
+              domain: vb1.dev.yufei.com
+
 
           #kafka
           kafka_brokerId: 0
+          #jdk
+          jdk_lib_path: "{{jdkPaths['11.0.12']}}"
+
+          #opensearch.sh
+          ops_dashboards:
+
+            home: /data/apps/ops_dashboards/
+            server.port: 5601
+            opensearch.hosts: http://vb0.dev.yufei.com:9200/
+            opensearch.username: test
+            opensearch.password: 123456
+
+
+          ops_cfg:
+            java_home: /usr/local/jdk/
+
+            node.roles:
+              - master
+              - data
+            cluster.name: ops_vb_dev
+            discovery.seed_hosts:
+              - vb0.dev.yufei.com:9300
+              - vb0.dev.yufei.com:9301
+
+            cluster.initial_master_nodes:
+              - vb0_1
+              - vb0_2
+
+
+
+
+            bootstrap.memory_lock: true
+
+
+#            node.name: vb0_2
+#            http.port: 9201
+#            transport.tcp.port: 9301
+#
+#            ops_home: /data/apps/ops_2/
+#            ops_cfgDir: /data/apps/ops_cfg_2/
+#            ops_dataDir: /data/apps/ops_data_2/
+#            ops_logDir: /data/apps/ops_logs_2/
+
+#
+            node.name: vb0_1
+            http.port: 9200
+            transport.tcp.port: 9300
+
+            ops_home: /data/apps/ops_1/
+            ops_cfgDir: /data/apps/ops_cfg_1/
+            ops_dataDir: /data/apps/ops_data_1/
+            ops_logDir: /data/apps/ops_logs_1/
+
+#            ops_dataDirs:
+#              dataDir1: /data/app_data/ops_data1
+#              dataDir2: /data/app_data/ops_data2
+#            ops_logDirs:
+#              logDir1: /data/app_data/ops_log1
+#              logDir2: /data/app_data/ops_log2
+#            ops_cfgDirs:
+#              cfgDir1: /data/app_data/ops_cfg1
+#              cfgDir2: /data/app_data/ops_cfg2
+            xms: -Xms1g
+            xmx: -Xmx1g
+
+
+
+
+
+
+
+
+
 
           #es
           es_config:
+
             node.roles:
               - master
             vm.max_map_count: 262144
@@ -263,7 +406,7 @@ all:
             wiredTiger.engineConfig.cacheSizeGB: 1
           #            wiredTiger.inMemory.engineConfig.inMemorySizeGB: 1
 
-          ansible_python_interpreter: /data/apps/miniconda3/bin/python
+#          ansible_python_interpreter: /data/apps/miniconda3/bin/python
 
 
 
@@ -272,6 +415,8 @@ all:
 
 
       vars:
+        op_user: zhaoyufei
+        op_user_group: hadoop
         as_hadoop_master: true
         as_hadoop_slave: true
         as_resourcemanager_address: vb0.dev.yufei.com
@@ -283,7 +428,7 @@ all:
           ansible_port: 22
           ansible_host: vb1.dev.yufei.com
           as_hostname: vb1.dev.yufei.com
-          ip: 192.168.18.22
+          ip: 10.112.100.44
           netplan_cfg: /etc/netplan/00-installer-config.yaml
           as_gpu: false
           as_docker_allowed_rw_mounts: /data/yarn/data,/data/yarn/logs
@@ -297,6 +442,63 @@ all:
           app_dataRootDir: /data/app_data/
           app_logRootDir: /data/app_logs/
           app_confRootDir: /data/app_conf/
+          domains:
+            - ip: 10.112.98.254
+              domain: vb0.dev.yufei.com
+            - ip: 10.112.100.44
+              domain: vb1.dev.yufei.com
+          ops_cfg:
+
+            node.roles:
+              - master
+              - data
+            cluster.name: ops_vb_dev
+            discovery.seed_hosts:
+              - vb0.dev.yufei.com:9300
+              - vb0.dev.yufei.com:9301
+
+
+            cluster.initial_master_nodes:
+#              - vb0_1
+#              - vb0_2
+
+
+
+
+            bootstrap.memory_lock: false
+
+
+            #            node.name: vb0_2
+            #            http.port: 9201
+            #            transport.tcp.port: 9301
+            #
+            #            ops_home: /data/apps/ops_2/
+            #            ops_cfgDir: /data/apps/ops_cfg_2/
+            #            ops_dataDir: /data/apps/ops_data_2/
+            #            ops_logDir: /data/apps/ops_logs_2/
+
+
+            node.name: vb1_1
+            http.port: 9200
+            transport.tcp.port: 9300
+
+            ops_home: /data/apps/ops_1/
+            ops_cfgDir: /data/apps/ops_cfg_1/
+            ops_dataDir: /data/apps/ops_data_1/
+            ops_logDir: /data/apps/ops_logs_1/
+
+            #            ops_dataDirs:
+            #              dataDir1: /data/app_data/ops_data1
+            #              dataDir2: /data/app_data/ops_data2
+            #            ops_logDirs:
+            #              logDir1: /data/app_data/ops_log1
+            #              logDir2: /data/app_data/ops_log2
+            #            ops_cfgDirs:
+            #              cfgDir1: /data/app_data/ops_cfg1
+            #              cfgDir2: /data/app_data/ops_cfg2
+            xms: -Xms1g
+            xmx: -Xmx1g
+
 
           #kafka
           kafka_brokerId: 1
@@ -363,6 +565,10 @@ all:
 
 
       vars:
+        #jdk
+        jdk_lib_path: "{{jdkPaths['11.0.12']}}"
+        op_user: zhaoyufei
+        op_user_group: hadoop
         as_hadoop_master: false
         as_hadoop_slave: true
         as_resourcemanager_address: vb0.dev.yufei.com
