--- a/roles/comm/tasks/main.yml
+++ b/roles/comm/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
+- name: test dict get key
+  tags: dict_get_key
+  shell: echo {{ jdk_lib_path }}
+
 #- name: test task 1
 #  shell: echo {{ as_test  }}
 #  #hostvars['gpu0.dev']['vars']['as_log_dirs']
@@ -301,14 +305,14 @@
     validate: 'visudo -cf %s'
   become: yes
   become_user: root
-
-- name: Install zip   (state=present is optional)
-  become: yes
-  become_user: root
-  tags: jdk_present
-  apt:
-    name: zip
-    state: present
+#
+#- name: Install zip   (state=present is optional)
+#  become: yes
+#  become_user: root
+#  tags: jdk_present
+#  apt:
+#    name: zip
+#    state: present
 - name: Remove the java_home
   become: yes
   become_user: root
@@ -332,8 +336,9 @@
   become_user: root
   tags: jdk_present
   unarchive:
-    src: "jdkPath"
-    dest: "{{java_home_prefix}}"
+    src: "{{jdk_lib_path}}"
+    dest: "{{java_home}}"
+    extra_opts: [--strip-components=1]
     owner: root
     group: root
 
@@ -424,5 +429,16 @@
 
 
 
+- name: ubuntu comm tools
+  package: name="{{item}}" state=present
+  become: yes
+  become_user: root
+  tags: tools_install
+  with_items:
+    - htop
+    - sysstat
+    - net-tools
+    - make
+    - zip
 
 
