test multi opensearch instances loop

--- a/hosts.yml
+++ b/hosts.yml
@@ -84,12 +84,6 @@ all:
           ip: 192.168.18.18
           as_hostname: gpu0.dev.yufei.com
           domains:
-            - ip: 192.168.18.22
-              domain: vb1.dev.yufei.com
-            - ip: 192.168.18.23
-              domain: vb2.dev.yufei.com
-            - ip: 192.168.18.21
-              domain: vb0.dev.yufei.com
             - ip: 192.168.18.18
               domain: gpu0.dev.yufei.com
 
@@ -112,6 +106,8 @@ all:
           as_log_dirs: /data1/yarn/logs
           as_memory_mb: 80960
           as_cpu_vcores: 200
+
+
 
 
           app_rootDir: /data1/apps/
@@ -145,25 +141,75 @@ all:
             opensearch.hosts: http://gpu0.dev.yufei.com:9200/
             opensearch.username: yufei.zhao
             opensearch.password: 123546
+          ops_cfgs:
+            - node.roles:
+                - master
+                - data
+              cluster.name: follower_dev
+              discovery.seed_hosts:
+                - gpu0.dev.yufei.com:9302
+                - gpu0.dev.yufei.com:9303
+              cluster.initial_master_nodes:
+                - follower_dev_1
+                - follower_dev_2
+              bootstrap.memory_lock: false
+
+              node.name: follower_dev_1
+              http.port: 9202
+              transport.tcp.port: 9302
+
+              ops_home: /data/apps/ops_follower_dev_1/
+              ops_cfgDir: /data/apps/ops_cfg_follower_dev_1/
+              ops_dataDir: /data2/ops_data_follower_dev_1/
+              ops_logDir: /data2/ops_logs_follower_dev_1/
+              xms: -Xms4g
+              xmx: -Xmx4g
+            - node.roles:
+                - master
+                - data
+              cluster.name: follower_dev
+              discovery.seed_hosts:
+                - gpu0.dev.yufei.com:9302
+                - gpu0.dev.yufei.com:9303
+              cluster.initial_master_nodes:
+                - follower_dev_1
+                - follower_dev_2
+              bootstrap.memory_lock: false
+              node.name: follower_dev_2
+              http.port: 9203
+              transport.tcp.port: 9303
+
+              ops_home: /data/apps/ops_follower_dev_2/
+              ops_cfgDir: /data/apps/ops_cfg_follower_dev_2/
+              ops_dataDir: /data2/ops_data_follower_dev_2/
+              ops_logDir: /data2/ops_logs_follower_dev_2/
+              #
+              xms: -Xms4g
+              xmx: -Xmx4g
+
 
           ops_cfg:
 
             node.roles:
               - master
               - data
-            cluster.name: comm_dev
+              # only need for follower node
+              - remote_cluster_client
+#            cluster.name: comm_dev
+            cluster.name: follower_dev
             discovery.seed_hosts:
-              - gpu0.dev.yufei.com:9300
-              - gpu0.dev.yufei.com:9301
+              - gpu0.dev.yufei.com:9302
+              - gpu0.dev.yufei.com:9303
 
             cluster.initial_master_nodes:
-              - com_dev_1
-              - com_dev_2
+              - follower_dev_1
+              - follower_dev_2
 
 
 
 
             bootstrap.memory_lock: false
+
 
 
             #            node.name: vb0_2
@@ -184,15 +230,37 @@ all:
 #            ops_cfgDir: /data/apps/ops_cfg_com_dev_1/
 #            ops_dataDir: /data2/ops_data_com_dev_1/
 #            ops_logDir: /data2/ops_logs_com_dev_1/
-            node.name: com_dev_2
-            http.port: 9201
-            transport.tcp.port: 9301
 
-            ops_home: /data/apps/ops_com_dev_2/
-            ops_cfgDir: /data/apps/ops_cfg_com_dev_2/
-            ops_dataDir: /data2/ops_data_com_dev_2/
-            ops_logDir: /data2/ops_logs_com_dev_2/
+#            node.name: com_dev_2
+#            http.port: 9201
+#            transport.tcp.port: 9301
+#
+#            ops_home: /data/apps/ops_com_dev_2/
+#            ops_cfgDir: /data/apps/ops_cfg_com_dev_2/
+#            ops_dataDir: /data2/ops_data_com_dev_2/
+#            ops_logDir: /data2/ops_logs_com_dev_2/
 
+
+#
+            node.name: follower_dev_1
+            http.port: 9202
+            transport.tcp.port: 9302
+
+            ops_home: /data/apps/ops_follower_dev_1/
+            ops_cfgDir: /data/apps/ops_cfg_follower_dev_1/
+            ops_dataDir: /data2/ops_data_follower_dev_1/
+            ops_logDir: /data2/ops_logs_follower_dev_1/
+
+#
+#            node.name: follower_dev_2
+#            http.port: 9203
+#            transport.tcp.port: 9303
+#
+#            ops_home: /data/apps/ops_follower_dev_2/
+#            ops_cfgDir: /data/apps/ops_cfg_follower_dev_2/
+#            ops_dataDir: /data2/ops_data_follower_dev_2/
+#            ops_logDir: /data2/ops_logs_follower_dev_2/
+#
             xms: -Xms4g
             xmx: -Xmx4g
 
