--- a/roles/opensearch/tasks/main.yml
+++ b/roles/opensearch/tasks/main.yml
@@ -1,5 +1,15 @@
 ---
-
+#- name: some test
+#  tags: ops_instances_loop
+#  shell: echo {{ item['discovery.seed_hosts'] }}
+#  with_items:
+#    - "{{ops_cfgs}}"
+- name: "loop through list from a variable"
+  tags: ops_instances_loop
+  debug:
+    msg: "{{ item['node.name'] }}"
+  with_items:
+    - "{{ops_cfgs}}"
 
 - name: Disable swap (if configured).
   become: yes
@@ -47,16 +57,20 @@
   tags: ops_clean
   shell:  bash -l -c ' nohup rm -rf {{ops_cfg.ops_logDir}}/* &'
 
-#
-#- name: start app
+#- name: opensearch start
 #  become: yes
-#  become_user: zhaoyufei
-#
-#  shell:  bash -l -c ' nohup {{app_rootDir}}{{appName}}/bin/elasticsearch &'
-##  when: as_hadoop_slave
-#  tags: es_start
-#  async: 30
-#  poll: 2
+#  become_user: "{{op_user}}"
+#  tags: ops_start
+#  command: bin/opensearch
+#  args:
+#      chdir: "{{ops_cfg.ops_home}}"
+- name: opensearch start
+  become: yes
+  become_user: "{{op_user}}"
+  shell:  bash -l -c ' nohup {{ops_cfg.ops_home}}/bin/opensearch > ./opensearch.out &'
+  tags: ops_start
+  async: 30
+  poll: 2
 - name: make sure all related folders present, if present do nothing
   become: yes
   become_user: root
@@ -189,4 +203,19 @@
 
 
 
-#- name: update plugins
+
+- name: update plugins
+  become: yes
+  become_user: root
+  tags: ops_plugins
+  copy:
+    src: "{{item.src}}"
+    dest: "{{item.dest}}"
+    owner: "{{ op_user }}"
+    group: "{{ op_user_group }}"
+    mode: u=rwx,g=xr,o=x
+  with_items:
+    - { src: '{{app_plugins_dir}}payloadPlugin',dest: '{{ops_cfg.ops_home}}/plugins/' }
+
+
+
