--- a/hosts.yml
+++ b/hosts.yml
@@ -212,16 +212,7 @@ all:
 
 
 
-            #            node.name: vb0_2
-            #            http.port: 9201
-            #            transport.tcp.port: 9301
-            #
-            #            ops_home: /data/apps/ops_2/
-            #            ops_cfgDir: /data/apps/ops_cfg_2/
-            #            ops_dataDir: /data/apps/ops_data_2/
-            #            ops_logDir: /data/apps/ops_logs_2/
 
-            #
 #            node.name: com_dev_1
 #            http.port: 9200
 #            transport.tcp.port: 9300
@@ -288,6 +279,8 @@ all:
           app_logRootDir: /data/app_logs/
           app_confRootDir: /data/app_conf/
           es_config:
+            xms: -Xms10g
+            xmx: -Xmx10g
             node.roles:
               - master
             vm.max_map_count: 262144
@@ -320,6 +313,9 @@ all:
           app_logRootDir: /data/app_logs/
           app_confRootDir: /data/app_conf/
           es_config:
+
+            xms: -Xms10g
+            xmx: -Xmx10g
             node.roles:
               - data
               - master
