--- a/roles/opensearch/tasks/main.yml
+++ b/roles/opensearch/tasks/main.yml
@@ -90,6 +90,15 @@
   async: 30
   poll: 2
 
+- name: Check that a page returns a status 200 and fail if the word AWESOME is not in the page contents
+  tags: ops_check
+  uri:
+    url: http://www.example.com
+    return_content: yes
+  register: this
+  failed_when: "'AWESOME' not in this.content"
+
+
 - name: ops dashboard start
   become: yes
   become_user: "{{op_user}}"
