--- a/roles/kafka/tasks/main.yml
+++ b/roles/kafka/tasks/main.yml
@@ -82,7 +82,7 @@
   become_user: root
   tags: kafka_install
   unarchive:
-    src: "{{kafka_libary_dir}}"
+    src: "{{kafka_path}}"
     dest: "{{app_rootDir}}{{appName}}/"
     extra_opts: [--strip-components=1]
 #    creates: "{{app_rootDir}}{{appName}}/"
@@ -125,8 +125,66 @@
 
 
 
+- name: make sure all related folders present, if present do nothing
+  become: yes
+  become_user: root
+  tags: cmak_install
+  file:
+    path: "{{item}}"
+    owner: "{{op_user}}"
+    group: "{{op_user_group}}"
+    mode: u=rwx,g=xr,o=x
+    recurse: yes
+    state: directory
+  loop:
+    - "{{cmak.rootFolder}}"
 
 
+
+- name: upload cmak.zip and unzip to  remote machine
+  become: yes
+  become_user: root
+  tags: cmak_install
+  unarchive:
+    src: "{{cmak_path}}"
+    dest: "{{cmak.rootFolder}}/"
+#    extra_opts: [--strip-components=1]
+#    creates: "{{app_rootDir}}{{appName}}/"
+    owner: "{{op_user}}"
+    group: "{{op_user_group}}"
+    mode: u=rwx,g=xr,o=x
+
+
+- name: make sure all related folders present, if present do nothing
+  become: yes
+  become_user: root
+  tags: cmak_install
+  file:
+    path: "{{item}}"
+    owner: "{{op_user}}"
+    group: "{{op_user_group}}"
+    mode: u=rwx,g=xr,o=x
+    recurse: yes
+    state: directory
+  loop:
+    - "{{cmak_home}}"
+
+
+
+
+- name: cmak config files
+  template:
+    dest: "{{item.dest}}"
+    src: templates/config/cmak/{{item.src}}
+    mode: u=rw,g=r,o=r
+    owner: "{{op_user}}"
+    group: "{{op_user_group}}"
+  become: yes
+  become_user: root
+  tags: cmak_config
+  with_items:
+        - {src: 'application.conf',dest: "{{cmak_home}}/conf/application.conf"}
+#        - {src: 'kafka-manager.j2',dest: "{{cmak_home}}/bin/kafka-manager"}
 
 
 
