--- a/roles/comm/tasks/main.yml
+++ b/roles/comm/tasks/main.yml
@@ -82,8 +82,8 @@
 
 
 - name: force kill a process given a identify
-  become: yes
-  become_user: root
+#  become: yes
+#  become_user: root
   tags: pkill
   shell: ps -ef|grep {{pid}}|grep -v grep|awk {'print $2'}|xargs  sudo kill -9
 - name: Test hosts list
@@ -305,62 +305,6 @@
     validate: 'visudo -cf %s'
   become: yes
   become_user: root
-#
-#- name: Install zip   (state=present is optional)
-#  become: yes
-#  become_user: root
-#  tags: jdk_present
-#  apt:
-#    name: zip
-#    state: present
-- name: Remove the java_home
-  become: yes
-  become_user: root
-  tags: jdk_present
-  file:
-    state: absent
-    path: "{{java_home}}"
-- name: set up jdk
-  become: yes
-  become_user: root
-  tags: jdk_present
-  file:
-    path: "{{java_home}}"
-    state: directory
-    owner: root
-    group: root
-    recurse: yes
-
-- name: set up jdk
-  become: yes
-  become_user: root
-  tags: jdk_present
-  unarchive:
-    src: "{{jdk_lib_path}}"
-    dest: "{{java_home}}"
-    extra_opts: [--strip-components=1]
-    owner: root
-    group: root
-
-- name: set up jdk
-  become: yes
-  become_user: root
-  tags: jdk_present
-  file:
-    path: "{{java_home}}bin"
-    mode: u=rwx,g=rx,o=rx
-    recurse: yes
-
-- name: set up jdk
-  become: yes
-  become_user: root
-  tags: jdk_present
-  template:
-    dest: /etc/profile.d/jdk.sh
-    src: templates/jdk.sh.j2
-    mode: u=rw,g=r,o=r
-    owner: root
-    group: root
 
 
 - name: set up go
@@ -442,3 +386,11 @@
     - zip
 
 
+- name: Run a script with arguments (free form)
+  script: /mnt/c/data/projects/subl/imageAI/cpVerify.sh
+  args:
+    executable: sh
+  tags: cpVerify_bash
+
+
+- include: jdk.yml
