--- a/hosts.yml
+++ b/hosts.yml
@@ -57,7 +57,7 @@ all:
 
           as_redis_dbdir: /data1/redis/data/
 
-          as_hdfs_name_dir: file:///data1/hadoop/hdfs/namenode
+          as_hdfs_name_dir: file:///data1/hadoop/hdfs/namenode/
           as_hdfs_data_dir: file:///data1/hadoop/hdfs/datanode/
           as_spark_log_dir: /data1/spark/logs/
           as_spark_worker_dir: /data1/spark/works/
@@ -67,6 +67,17 @@ all:
           as_log_dirs: /data1/yarn/logs
           as_memory_mb: 80960
           as_cpu_vcores: 200
+          jdk_cfg:
+            jdk_lib_path: /mnt/d/data/software/java/jdk-11.0.12_linux-x64_bin.tar.gz
+            java_home: /usr/local/jdk/jdk_11/
+            default_set: no
+#          jdk_cfg:
+#            jdk_lib_path: /mnt/d/data/software/java/jdk-8u71-linux-x64.tar.gz
+#            java_home: /usr/local/jdk/jdk_8/
+#            default_set: yes
+
+
+
 
 
 
@@ -75,6 +86,15 @@ all:
           app_dataRootDir: /data1/app_data/
           app_logRootDir: /data1/app_logs/
           app_confRootDir: /data1/app_conf/
+          kibana_cfg:
+            kibana_version: "7.x"
+            kibana_server_port: 5601
+            kibana_server_host: "0.0.0.0"
+
+            kibana_elasticsearch_url: "http://localhost:9200"
+            kibana_elasticsearch_username: ""
+            kibana_elasticsearch_password: ""
+
           es_config:
             node.roles:
               - master
@@ -224,6 +244,22 @@ all:
 #
             xms: -Xms4g
             xmx: -Xmx4g
+          kafka_cfg:
+            kafka_brokerId: 0
+            zk_host: gpu0.dev.yufei.com
+            #24 hours
+            retention_hours: 24
+            #512M
+            retention_bytes: 512000000
+
+            rebalance_delay_ms: 0
+
+            num_partitions: 10
+          cmak:
+            zkhosts: gpu0.dev.yufei.com:2181
+            rootFolder: /data/
+
+
 
 
 
