--- a/hosts.yml
+++ b/hosts.yml
@@ -107,7 +107,8 @@ all:
 
             cluster.initial_master_nodes:
               - gpu0.dev.yufei.com
-            ES_JAVA_OPTS:
+            xms: -Xms4g
+            xmx: -Xmx4g
           mongo_config:
             wiredTiger.engineConfig.cacheSizeGB: 10
 
