--- a/hosts.yml
+++ b/hosts.yml
@@ -86,6 +86,8 @@ all:
           app_dataRootDir: /data1/app_data/
           app_logRootDir: /data1/app_logs/
           app_confRootDir: /data1/app_conf/
+          redis_cfg:
+            dataDir: /data2/redis_data/
           kibana_cfg:
             kibana_version: "7.x"
             kibana_server_port: 5601
@@ -109,6 +111,7 @@ all:
               - gpu0.dev.yufei.com
             xms: -Xms4g
             xmx: -Xmx4g
+            ES_JAVA_OPTS:
           mongo_config:
             wiredTiger.engineConfig.cacheSizeGB: 10
 
