support tz es config

--- a/hosts.yml
+++ b/hosts.yml
@@ -294,6 +294,7 @@ all:
               - es_test0.dev.tz.com
             xms: -Xms3g
             xmx: -Xmx3g
+            ES_JAVA_OPTS:
 
 
     yto_es:
@@ -803,4 +804,3 @@ all:
 
 
 
->>>>>>> Stashed changes
