--- a/hosts.yml
+++ b/hosts.yml
@@ -1,6 +1,8 @@
 all:
   hosts:
   children:
+
+
     wsl:
       hosts:
         yufeiDevLocal:
@@ -58,7 +60,7 @@ all:
           as_redis_dbdir: /data1/redis/data/
 
           as_hdfs_name_dir: file:///data1/hadoop/hdfs/namenode/
-          as_hdfs_data_dir: file:///data1/hadoop/hdfs/datanode/
+          as_hdfs_data_dir: file:///data1/hadoop/hdfs/datanode/,file:///data3/hadoop/hdfs/datanode/
           as_spark_log_dir: /data1/spark/logs/
           as_spark_worker_dir: /data1/spark/works/
           as_spark_local_dirs: /data1/spark/data/
@@ -262,6 +264,13 @@ all:
           cmak:
             zkhosts: gpu0.dev.yufei.com:2181
             rootFolder: /data/
+          minio_cfg:
+            console-address: :10000
+            dataDir: /data1/minio
+          pulsar_cfg:
+
+
+
 
 
 
