--- a/roles/redis/tasks/main.yml
+++ b/roles/redis/tasks/main.yml
@@ -49,6 +49,20 @@
     owner: zhaoyufei
     group: hadoop
     mode: u=rwx,g=xr,o=x
+- name: make sure all related folders present, if present do nothing
+  become: yes
+  become_user: root
+  tags: redis_config
+  file:
+    path: "{{item}}"
+    owner: zhaoyufei
+    group: hadoop
+    mode: u=rwx,g=xr,o=x
+    recurse: yes
+    state: directory
+  loop:
+    - "{{redis_cfg['dataDir']}}/"
+
 
 
 - name: app config files
