--- a/hosts.yml
+++ b/hosts.yml
@@ -280,7 +280,39 @@ all:
           app_confRootDir: /data/app_conf/
           op_user: www
           op_user_group: wheel
+          zk_cfg:
+            port: 6204
+
+
+
+
+
+          kafka_cfg:
+            kafka_brokerId: 0
+            port: 6202
+            num_partitions: 1
+            retention_hours: 24
+            #512M
+            retention_bytes: 512000000
+            zk_host: es_test0.dev.tz.com:6204
+            rebalance_delay_ms: 0
+          kafka_cdc_cfg:
+             plugin_path:
+             bootstrap_servers: es_test0.dev.tz.com:6202
+             rest_port: 6203
+
+          kibana_cfg:
+            kibana_version: "7.x"
+            kibana_server_port: 6201
+            kibana_server_host: "0.0.0.0"
+
+            kibana_elasticsearch_url: "http://localhost:6200"
+            kibana_elasticsearch_username: ""
+            kibana_elasticsearch_password: ""
+
           es_config:
+            http_port: 6200
+
             node.roles:
               - master
               - data
@@ -292,8 +324,8 @@ all:
 
             cluster.initial_master_nodes:
               - es_test0.dev.tz.com
-            xms: -Xms3g
-            xmx: -Xmx3g
+            xms: -Xms1g
+            xmx: -Xmx1g
             ES_JAVA_OPTS:
 
 
