--- a/roles/kafka/templates/config/connect-distributed.properties
+++ b/roles/kafka/templates/config/connect-distributed.properties
@@ -20,7 +20,7 @@
 # the `bootstrap.servers` and those specifying replication factors.
 
 # A list of host/port pairs to use for establishing the initial connection to the Kafka cluster.
-bootstrap.servers=localhost:9092
+bootstrap.servers={{kafka_cdc_cfg['bootstrap_servers']}}
 
 # unique name for the cluster, used in forming the Connect cluster group. Note that this must not conflict with consumer group IDs
 group.id=connect-cluster
@@ -69,7 +69,7 @@ offset.flush.interval.ms=10000
 # These are provided to inform the user about the presence of the REST host and port configs 
 # Hostname & Port for the REST API to listen on. If this is set, it will bind to the interface used to listen to requests.
 #rest.host.name=
-#rest.port=8083
+rest.port={{kafka_cdc_cfg['rest_port']}}
 
 # The Hostname & Port that will be given out to other workers to connect to i.e. URLs that are routable from other servers.
 #rest.advertised.host.name=
@@ -81,6 +81,4 @@ offset.flush.interval.ms=10000
 # a) directories immediately containing jars with plugins and their dependencies
 # b) uber-jars with plugins and their dependencies
 # c) directories immediately containing the package directory structure of classes of plugins and their dependencies
-# Examples: 
-# plugin.path=/usr/local/share/java,/usr/local/share/kafka/plugins,/opt/connectors,
-#plugin.path=
+plugin.path={{kafka_cdc_cfg['plugin_path']}}
