--- a/roles/es/tasks/main.yml
+++ b/roles/es/tasks/main.yml
@@ -1,116 +1,3 @@
 ---
-
-- name: empty es data, log
-  become: yes
-  become_user: root
-  tags: es_clean
-  shell:  bash -l -c ' nohup rm -rf {{app_dataRootDir}}{{appName}}/* &'
-- name: empty es data, log
-  become: yes
-  become_user: root
-  tags: es_clean
-  shell:  bash -l -c ' nohup rm -rf {{app_logRootDir}}{{appName}}/* &'
-
-
-- name: start app
-  become: yes
-  become_user: "{{op_user}}"
-
-  shell:  bash -l -c ' nohup {{app_rootDir}}{{appName}}/bin/elasticsearch &'
-#  when: as_hadoop_slave
-  tags: es_start
-  async: 30
-  poll: 2
-- name: make sure all related folders present, if present do nothing
-  become: yes
-  become_user: root
-  tags: es_install
-  file:
-    path: "{{item}}"
-    owner: "{{op_user}}"
-    group: "{{op_user_group}}"
-    mode: u=rwx,g=xr,o=x
-    recurse: yes
-    state: directory
-  loop:
-    - "{{app_logRootDir}}{{appName}}/"
-    - "{{app_dataRootDir}}{{appName}}/"
-    - "{{app_confRootDir}}{{appName}}/"
-    - "{{app_rootDir}}{{appName}}/"
-
-
-- name: upload app and unzip to  remote machine
-  become: yes
-  become_user: root
-  tags: es_install
-  unarchive:
-    src: "{{app_libary_dir}}"
-    dest: "{{app_rootDir}}{{appName}}/"
-    extra_opts: [--strip-components=1]
-#    creates: "{{app_rootDir}}{{appName}}/"
-    owner: "{{op_user}}"
-    group: "{{op_user_group}}"
-    mode: u=rwx,g=xr,o=x
-- name: deploy plugins
-  become: yes
-  become_user: root
-  tags: es_plugin_install
-  copy:
-    src: "{{es_plugins_dir}}"
-    dest: "{{app_rootDir}}{{appName}}/"
-    owner: "{{op_user}}"
-    group: "{{op_user_group}}"
-    mode: u=rwx,g=xr,o=x
-
-- name: copy orginal config files to conf folder
-  become: yes
-  become_user: root
-  tags: es_install
-  copy:
-    src: templates/config/
-    dest: "{{app_confRootDir}}{{appName}}"
-    owner: "{{op_user}}"
-    group: "{{op_user_group}}"
-    mode: u=rwx,g=xr,o=x
-
-- name: app config files
-  template:
-    dest: "{{app_confRootDir}}{{appName}}/{{item.dest}}"
-    src: templates/config/{{item.src}}
-    mode: u=rw,g=r,o=r
-    owner: "{{op_user}}"
-    group: "{{op_user_group}}"
-  become: yes
-  become_user: root
-  tags: es_config
-  with_items:
-        - {src: 'elasticsearch.yml',dest: 'elasticsearch.yml'}
-        - {src: 'jvm.options',dest: 'jvm.options'}
-
-
-- name: app env setup
-  template:
-    src: templates/es.sh
-    dest: /etc/profile.d/es.sh
-    owner: root
-    group: root
-    mode: u=rw,g=r,o=r
-  become: yes
-  become_user: root
-  tags:
-    - es_config
-
-- name: app env setup
-  become: yes
-  become_user: root
-  tags:
-    - es_config
-  ansible.posix.sysctl:
-    name: vm.max_map_count
-    value: "{{es_config['vm.max_map_count']}}"
-    state: present
-
-
-
-
-
+- include: es.yml
+- include: kibana.yml
