--- a/roles/es/templates/config/elasticsearch.yml
+++ b/roles/es/templates/config/elasticsearch.yml
@@ -40,7 +40,7 @@ path.logs: {{app_logRootDir}}{{appName}}/
 #
 # Lock the memory on startup:
 #
-#bootstrap.memory_lock: true
+bootstrap.memory_lock: true
 #
 # Make sure that the heap size is set to about half the memory available
 # on the system and that the owner of the process is allowed to use this
@@ -56,7 +56,7 @@ network.host: {{ip}}
 #
 # Set a custom port for HTTP:
 #
-http.port: 9200
+http.port: {{es_config.http_port}}
 #
 # For more information, consult the network module documentation.
 #
@@ -93,4 +93,3 @@ node.roles: {{es_config['node.roles']}}
 # Require explicit names when deleting indices:
 #
 #action.destructive_requires_name: true
-#xpack.security.enabled: true
