--- a/roles/zk/templates/zoo.cfg
+++ b/roles/zk/templates/zoo.cfg
@@ -11,7 +11,7 @@ syncLimit=5
 # example sakes.
 dataDir={{app_dataRootDir}}{{appName}}/
 # the port at which the clients will connect
-clientPort=2181
+clientPort={{zk_cfg['port']}}
 # the maximum number of client connections.
 # increase this if you need to handle more clients
 #maxClientCnxns=60
