--- a/hosts.yml
+++ b/hosts.yml
@@ -297,9 +297,10 @@ all:
             zk_host: es_test0.dev.tz.com:6204
             rebalance_delay_ms: 0
           kafka_cdc_cfg:
-             plugin_path:
              bootstrap_servers: es_test0.dev.tz.com:6202
              rest_port: 6203
+             conn-plugins:
+               - debezium-connector-mysql-1.8.1.Final-plugin.tar.gz
 
           kibana_cfg:
             kibana_version: "7.x"
