--- a/roles/kafka/templates/config/connect-distributed.properties
+++ b/roles/kafka/templates/config/connect-distributed.properties
@@ -81,4 +81,4 @@ rest.port={{kafka_cdc_cfg['rest_port']}}
 # a) directories immediately containing jars with plugins and their dependencies
 # b) uber-jars with plugins and their dependencies
 # c) directories immediately containing the package directory structure of classes of plugins and their dependencies
-plugin.path={{kafka_cdc_cfg['plugin_path']}}
+plugin.path={{kafka_conn_plugins_path}}
