--- a/roles/kafka/tasks/main.yml
+++ b/roles/kafka/tasks/main.yml
@@ -1,17 +1,22 @@
 ---
+
+
+
+- include: connectors.yml
+
 # kafka operations
 
 
 - name: start kafka
   shell:  bash -l -c ' nohup {{app_rootDir}}{{appName}}/bin/kafka-server-start.sh {{app_confRootDir}}{{appName}}/server.properties &'
-#  when: as_hadoop_slave
+#  when: as_"{{op_user_group}}"_slave
   tags: kafka_start
   async: 30
   poll: 2
 
 - name: restart kafka
   shell:  bash -l -c '{{app_rootDir}}{{appName}}/bin/kafka-server-stop.sh {{app_confRootDir}}{{appName}}/server.properties' ; bash -l -c 'nohup {{app_rootDir}}{{appName}}/bin/kafka-server-start.sh {{app_confRootDir}}{{appName}}/server.properties &'
-#  when: as_hadoop_slave
+#  when: as_"{{op_user_group}}"_slave
   tags: kafka_restart
   async: 30
   poll: 2
@@ -19,12 +24,12 @@
 #- name: start
 #  -
 #kafka config
-- name: check if jdk installed
-  tags: kafka_install
-  shell: command -v java
-  register: check_java
-  ignore_errors: True
-  changed_when: False
+#- name: check if jdk installed
+#  tags: kafka_install
+#  shell: command -v java
+#  register: check_java
+#  ignore_errors: True
+#  changed_when: False
 #- name: kafka install debug
 #  tags: kafka_install
 #
@@ -65,8 +70,8 @@
   tags: kafka_install
   file:
     path: "{{item}}"
-    owner: zhaoyufei
-    group: hadoop
+    owner: "{{op_user}}"
+    group: "{{op_user_group}}"
     mode: u=rwx,g=xr,o=x
     recurse: yes
     state: directory
@@ -75,6 +80,7 @@
     - "{{app_dataRootDir}}{{appName}}/"
     - "{{app_confRootDir}}{{appName}}/"
     - "{{app_rootDir}}{{appName}}/"
+    - "{{kafka_conn_plugins_path}}"
 
 
 - name: upload kafka.tgz and unzip to  remote machine
@@ -86,8 +92,8 @@
     dest: "{{app_rootDir}}{{appName}}/"
     extra_opts: [--strip-components=1]
 #    creates: "{{app_rootDir}}{{appName}}/"
-    owner: zhaoyufei
-    group: hadoop
+    owner: "{{op_user}}"
+    group: "{{op_user_group}}"
     mode: u=rwx,g=xr,o=x
 - name: copy orginal config files to conf folder
   become: yes
@@ -96,8 +102,8 @@
   copy:
     src: templates/config/
     dest: "{{app_confRootDir}}{{appName}}"
-    owner: zhaoyufei
-    group: hadoop
+    owner: "{{op_user}}"
+    group: "{{op_user_group}}"
     mode: u=rwx,g=xr,o=x
 
 
@@ -110,13 +116,14 @@
     dest: "{{app_confRootDir}}{{appName}}/{{item.dest}}"
     src: templates/config/{{item.src}}
     mode: u=rw,g=r,o=r
-    owner: zhaoyufei
-    group: hadoop
+    owner: "{{op_user}}"
+    group: "{{op_user_group}}"
   become: yes
   become_user: root
   tags: kafka_config
   with_items:
         - {src: 'server.properties',dest: 'server.properties'}
+        - {src: 'connect-distributed.properties',dest: 'connect-distributed.properties'}
         - {src: 'log4j.properties',dest: 'log4j.properties'}
 
 
