--- a/roles/zk/tasks/main.yml
+++ b/roles/zk/tasks/main.yml
@@ -1,14 +1,14 @@
 ---
 - name: restart zookeeper
   shell:  bash -l -c '{{zk_home}}bin/bin/zkServer.sh restart'
-#  when: as_hadoop_slave
+#  when: as_"{{op_user_group}}"_slave
   tags: zk_restart
   async: 30
   poll: 2
 
 - name: start zookeeper
   shell:  bash -l -c '{{zk_home}}bin/zkServer.sh start'
-#  when: as_hadoop_slave
+#  when: as_"{{op_user_group}}"_slave
   tags: zk_start
   async: 30
   poll: 2
@@ -18,8 +18,8 @@
   tags: zk_install
   file:
     path: "{{item}}"
-    owner: zhaoyufei
-    group: hadoop
+    owner: "{{op_user}}"
+    group: "{{op_user_group}}"
     mode: u=rwx,g=xr,o=x
     recurse: yes
     state: directory
@@ -37,8 +37,8 @@
     dest: "{{app_rootDir}}{{appName}}/"
     extra_opts: [--strip-components=1]
 #    creates: "{{app_rootDir}}{{appName}}/"
-    owner: zhaoyufei
-    group: hadoop
+    owner: "{{op_user}}"
+    group: "{{op_user_group}}"
     mode: u=rwx,g=xr,o=x
 #- name: upload zk.tgz to remote machine
 #  become: yes
@@ -46,8 +46,8 @@
 #  unarchive:
 #    src: "{{zk_libary_dir}}"
 #    dest: "{{app_rootDir}}"
-#    owner: zhaoyufei
-#    group: hadoop
+#    owner: "{{op_user}}"
+#    group: "{{op_user_group}}"
 #    mode: u=rwx,g=xr,o=x
 #  tags: zk_setup
 
@@ -58,8 +58,8 @@
 #  tags: zk_setup
 #  file:
 #    path: "{{zk_home}}"
-#    owner: zhaoyufei
-#    group: hadoop
+#    owner: "{{op_user}}"
+#    group: "{{op_user_group}}"
 #    mode: u=rwx,g=xr,o=x
 #    recurse: yes
 #    state: directory
@@ -72,8 +72,8 @@
 #  tags: zk_setup
 #  file:
 #    path: "{{app_dataRootDir}}{{appName}}/"
-#    owner: zhaoyufei
-#    group: hadoop
+#    owner: "{{op_user}}"
+#    group: "{{op_user_group}}"
 #    mode: u=rwx,g=xr,o=x
 #    recurse: yes
 #    state: directory
@@ -82,8 +82,8 @@
     dest: "{{item.dest}}"
     src: templates/{{item.src}}
     mode: u=rw,g=r,o=r
-    owner: zhaoyufei
-    group: hadoop
+    owner: "{{op_user}}"
+    group: "{{op_user_group}}"
   become: yes
   become_user: root
   tags: zk_config
